# weaselbot

./: .env.example  .git-branches.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  achievement_tables.py  achievement_tables.sql  create_view.py  f3_data_builder.ipynb  f3_data_builder.py  kotter_report.py  kotter_report_combined.py  pax_achievements combined.py  pax_achievements.py  pax_achievements_sqla.ipynb  pyproject.toml  requirements.txt  setup.py  slack_photo_archive.py  update_paxminer_tables.py  utils.py
scripts/: run_kotter_report.sh  run_pax_achievements.sh
tests/: models.py  test_achievement_tables.py  test_f3_data_builder.py  test_kotter_report.py  test_pax_achievements.py  test_utils.py
weaselbot/: achievement_tables.py  kotter_report.py  pax_achievements.py  utils.py
