[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120

exclude = ["jupyter_notebook_config.py"]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.poetry]
name = "weaselbot"
version = "1.5.0"
description = ""
authors = ["Evan Petzoldt <evan.petzoldt@protonmail.com>", "Jim Sheldon <sumo@f3chicago.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asttokens = "^2.4.1"
backcall = "^0.2.0"
black = "^23.12.1"
click = "^8.1.7"
comm = "^0.2.1"
debugpy = "^1.8.0"
decorator = "^5.1.1"
executing = "^2.0.1"
greenlet = "^3.0.3"
importlib-metadata = "^7.0.1"
ipykernel = "^6.28.0"
ipython = "^8.19.0"
jedi = "^0.19.1"
jupyter-client = "^8.6.0"
jupyter-core = "^5.7.0"
matplotlib-inline = "^0.1.6"
mypy-extensions = "^1.0.0"
mysql-connector-python = "^8.2.0"
nest-asyncio = "^1.5.8"
numpy = "^1.26.3"
packaging = "^23.2"
parso = "^0.8.3"
pathspec = "^0.12.1"
pexpect = "^4.9.0"
pickleshare = "^0.7.5"
platformdirs = "^4.1.0"
prompt-toolkit = "^3.0.43"
protobuf = "4.21.12"
psutil = "^5.9.7"
ptyprocess = "^0.7.0"
pure-eval = "0.2.2"
pygments = "^2.17.2"
pymysql = "^1.1.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
pyzmq = "^25.1.2"
six = "^1.16.0"
slack-sdk = "^3.26.1"
sqlalchemy = "^2.0.25"
stack-data = "^0.6.3"
tomli = "^2.0.1"
tornado = "^6.4"
traitlets = "^5.14.1"
typing-extensions = "^4.9.0"
wcwidth = "^0.2.13"
zipp = "^3.17.0"
pytest = "^7.4.4"
pre-commit = "^3.6.0"
ruff = "^0.1.11"
sqlparse = "^0.4.4"
pyarrow = "^18.0.0"
polars = "^1.0.0"
connectorx = "^0.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
