[project]
name = "weaselbot"
version = "1.5.0"
description = ""
authors = [
    { name = "Evan Petzoldt", email = "evan.petzoldt@protonmail.com" },
    { name = "Jim Sheldon", email = "sumo@f3chicago.com" },
]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "asttokens>=2.4.1,<3",
    "backcall>=0.2.0,<0.3",
    "black>=23.12.1,<24",
    "click>=8.1.7,<9",
    "comm>=0.2.1,<0.3",
    "debugpy>=1.8.0,<2",
    "decorator>=5.1.1,<6",
    "executing>=2.0.1,<3",
    "greenlet>=3.0.3,<4",
    "importlib-metadata>=7.0.1,<8",
    "ipykernel>=6.28.0,<7",
    "ipython>=8.19.0,<9",
    "jedi>=0.19.1,<0.20",
    "jupyter-client>=8.6.0,<9",
    "jupyter-core>=5.7.0,<6",
    "matplotlib-inline>=0.1.6,<0.2",
    "mypy-extensions>=1.0.0,<2",
    "mysql-connector-python>=8.2.0,<9",
    "nest-asyncio>=1.5.8,<2",
    "numpy>=1.26.3,<2",
    "packaging~=23.2",
    "parso>=0.8.3,<0.9",
    "pathspec>=0.12.1,<0.13",
    "pexpect>=4.9.0,<5",
    "pickleshare>=0.7.5,<0.8",
    "platformdirs>=4.1.0,<5",
    "prompt-toolkit>=3.0.43,<4",
    "protobuf==4.21.12",
    "psutil>=5.9.7,<6",
    "ptyprocess>=0.7.0,<0.8",
    "pure-eval==0.2.2",
    "pygments>=2.17.2,<3",
    "pymysql>=1.1.0,<2",
    "python-dateutil>=2.8.2,<3",
    "python-dotenv>=1.0.0,<2",
    "pytz~=2023.3.post1",
    "pyzmq>=25.1.2,<26",
    "six>=1.16.0,<2",
    "slack-sdk>=3.26.1,<4",
    "sqlalchemy>=2.0.25,<3",
    "stack-data>=0.6.3,<0.7",
    "tomli>=2.0.1,<3",
    "tornado~=6.4",
    "traitlets>=5.14.1,<6",
    "typing-extensions>=4.9.0,<5",
    "wcwidth>=0.2.13,<0.3",
    "zipp>=3.17.0,<4",
    "pytest>=7.4.4,<8",
    "pre-commit>=3.6.0,<4",
    "ruff>=0.1.11,<0.2",
    "sqlparse>=0.4.4,<0.5",
    "pyarrow>=18.0.0,<19",
    "polars>=1.9.0,<2",
    "connectorx>=0.4,<0.5",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0,<2",
    "pytest>=7.4.4,<8",
    "pytest-mock>=3.12.0,<4",
]

[tool.ruff]
line-length = 120

exclude = ["jupyter_notebook_config.py"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]
