[project]
name = "weaselbot"
version = "1.6.0"
description = ""
authors = [
    { name = "Evan Petzoldt", email = "evan.petzoldt@protonmail.com" },
    { name = "Jim Sheldon", email = "sumo@f3chicago.com" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "ruff>=0.9.5",
    "connectorx>=0.4.1",
    "pyarrow>=19.0.0",
    "polars>=1.21.0",
    "pytest>=7.4.4",
    "sqlparse>=0.5.3",
    "pre-commit>=4.1.0",
    "zipp>=3.21.0",
    "wcwidth>=0.2.13",
    "typing-extensions>=4.12.2",
    "traitlets>=5.14.3",
    "tornado>=6.4.2",
    "tomli>=2.2.1",
    "stack-data>=0.6.3",
    "sqlalchemy>=2.0.38",
    "slack-sdk>=3.34.0",
    "six>=1.17.0",
    "pyzmq>=25.1.2",
    "pytz>=2025.1",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0.post0",
    "pymysql>=1.1.1",
    "pygments>=2.19.1",
    "pure-eval>=0.2.2",
    "ptyprocess>=0.7.0",
    "psutil>=5.9.8",
    "protobuf>=5.29.3",
    "prompt-toolkit>=3.0.48",
    "platformdirs>=4.3.6",
    "pickleshare>=0.7.5",
    "pexpect>=4.9.0",
    "pathspec>=0.12.1",
    "parso>=0.8.4",
    "packaging>=23.2",
    "numpy>=2.2.2",
    "nest-asyncio>=1.6.0",
    "mysql-connector-python>=9.2.0",
    "mypy-extensions>=1.0.0",
    "matplotlib-inline>=0.1.7",
    "jupyter-core>=5.7.2",
    "jupyter-client>=8.6.3",
    "jedi>=0.19.2",
    "ipython>=8.32.0",
    "ipykernel>=6.29.5",
    "importlib-metadata>=8.6.1",
    "greenlet>=3.1.1",
    "executing>=2.1.0",
    "decorator>=5.1.1",
    "debugpy>=1.8.12",
    "comm>=0.2.2",
    "click>=8.1.8",
    "black>=25.1.0",
    "backcall>=0.2.0",
    "asttokens>=2.4.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=7.4.4",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
line-length = 120

exclude = ["jupyter_notebook_config.py"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]
